# ably-connectors

./: .gitignore  README.md
ably-c/: CMakeLists.txt  LICENSE  NOTICE  README.md
ably-c/.github/workflows/: ci.yml
ably-c/cmake/: ably_version.h.in  cpp_binding_check.cpp
ably-c/examples/: CMakeLists.txt  asio_glue.hpp  asio_glue_main.cpp  libuv_glue.c  realtime_presence.c  realtime_presence.cpp  realtime_publish.c  realtime_publish.cpp  realtime_subscribe.c  realtime_subscribe.cpp  realtime_subscribe_delta.c  rest_publish.c  rest_publish.cpp
ably-c/include/ably/: ably.h  ably.hpp  ably_allocator.h  ably_realtime.h  ably_rest.h  ably_types.h
ably-c/src/: alloc.c  alloc.h  base64.c  base64.h  hashmap.c  hashmap.h  log.c  log.h  mutex.c  mutex.h  tls_ca.c  tls_ca.h
ably-c/src/delta/: vcdiff.c  vcdiff.h
ably-c/src/http/: http_client.c  http_client.h
ably-c/src/realtime/: channel.c  channel.h  presence.c  presence.h  protocol.c  protocol.h  protocol_json.c  protocol_msgpack.c  realtime_client.c  realtime_client.h
ably-c/src/rest/: rest_client.c  rest_client.h
ably-c/src/ws/: ws_client.c  ws_client.h
ably-c/tests/: CMakeLists.txt  test_allocator.c  test_base64.c  test_delta.c  test_e2e_delta.c  test_e2e_presence.c  test_e2e_pubsub.c  test_hashmap.c  test_history.c  test_presence_proto.c  test_protocol_json.c  test_protocol_msgpack.c  test_realtime.c  test_rest.c
flink-sql-sink/: README.md  pom.xml
flink-sql-sink/src/main/java-flink1/com/edp/vvc/connector/ably/: AblyDynamicTableSink.java  AblySinkFunction.java
flink-sql-sink/src/main/java-flink2/com/edp/vvc/connector/ably/: AblyDynamicTableSink.java  AblySink.java  AblySinkWriter.java
flink-sql-sink/src/main/java/com/edp/vvc/connector/ably/: AblyBatchPublisher.java  AblyDynamicTableSinkFactory.java  AblyRowSerializer.java
src/main/java-flink1/com/edp/vvc/connector/ably/: AblyDynamicTableSink.java  AblySinkFunction.java
src/main/java-flink2/com/edp/vvc/connector/ably/: AblyDynamicTableSink.java  AblySink.java  AblySinkWriter.java
src/main/java/com/edp/vvc/connector/ably/: AblyBatchPublisher.java  AblyDynamicTableSinkFactory.java  AblyRowSerializer.java
